--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,8 @@ Metrics/ClassLength:
   Max: 1500
 Metrics/BlockLength:
   Max: 50
+Metrics/ParameterLists:
+  Max: 10
 Layout/SpaceAroundEqualsInParameterDefault:
   EnforcedStyle: space
 Style/SymbolArray:
@@ -17,6 +19,7 @@ Style/Documentation:
   Enabled: false
 AllCops:
   TargetRubyVersion: 2.5
+  NewCops: enable
 Style/FrozenStringLiteralComment:
   Enabled: false
 Naming/FileName:
